<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="licenses">Licenses</string>
    <string name="profiles">Profiles</string>
    <string name="save_log">Save log</string>
    <string name="about_message">Neutron is an advanced J2ME emulator for Android by nsomatrix. It supports most 2D and 3D games (including Mascot Capsule 3D ones).&lt;BR></string>
    <string name="help_message">&#8226; Enabling filtering in some cases can greatly reduce performance. Disable this option if game is too slow.&lt;BR>&#8226; Image flickering issues can be fixed by enabling the "Immediate processing mode" option.</string>
    <string name="about_github" translatable="false">&lt;BR>GitHub: &lt;a href="https://github.com/nsomatrix/neutron-android">github.com/nsomatrix/neutron-android&lt;/a></string>
    <string name="about_copyright" translatable="false">&lt;BR>&lt;BR>Neutron by nsomatrix&lt;BR>Based on J2ME-Loader (Copyright 2017-2024 Nikita Shakarun) and JL-Mod (Copyright 2020-2022 Yury Kharchenko)</string>
    <string name="author">Author: </string>
    <string name="version">Version: </string>
    <string name="no_data_for_display">No data</string>
    <string name="message_delete">Do you really want to delete this app?</string>
    <string name="permission_request_failed">This app requires storage write permission</string>
    <string name="external_storage_not_mounted">This app requires external storage</string>
    <string name="create">create</string>
    <string name="alert_msg_workdir_not_exists">Working directory does not exist at path:\n\'%1$s\'.\nDo you want to create it or choose another one?</string>
    <string name="action_context_shortcut">Add shortcut</string>
    <string name="action_reinstall">Reinstall</string>
    <string name="action_settings">Settings</string>
    <string name="action_context_delete">Delete</string>
    <string name="action_context_rename">Rename</string>
    <string name="retry">retry</string>
    <string name="err_missing_app">Application not found.\nPlease check storage device %savailability or re-create shortcut.</string>
    <string name="error_disk_io">Storage error: check disk space</string>
    <string name="create_apps_dir_failed">Failed to create a folder in the path:\n\'%s\'\nselect another.</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="warning">Warning</string>
    <string name="scoped_storage_warning">Your user data is stored in a location which <b>will be deleted</b> when you uninstall the app:\n</string>
    <string name="error_no_picker">Please install a file picker app</string>
    <string name="midlet_name"><b>Name: </b></string>
    <string name="midlet_size"><b>Size: </b></string>
    <string name="midlet_source"><b>Source: </b></string>
    <string name="midlet_vendor"><b>Vendor: </b></string>
    <string name="midlet_version"><b>Version: </b></string>
    <string name="converting_wait">Converting JAR</string>
    <string name="install">install</string>
    <string name="install_done">Application successfully installed!</string>
    <string name="install_jar_non_matched_jad">This app differs from that described in JAD.\nIgnore JAD and install anyway?</string>
    <string name="install_jar_needed">Select the JAR file</string>
    <string name="invalid_resolution_not_saved">Invalid resolutions: not saved!</string>
    <string name="warn_install_from_net">File will be downloaded from Internet</string>
    <string name="reinstall">App already installed.\n\nDo you want to reinstall it?\nAll data will be saved.</string>
    <string name="reinstall_newest">Update this app to version %1$s?\n\nCurrently installed: %2$s\nAll data will be saved.</string>
    <string name="reinstall_older">Replace this app with version %1$s?\n\nCurrently installed: %2$s\nOlder version may not working correctly with recorded data.</string>
    <string name="loading_info">Loading info</string>
    <string name="START_CMD">Start</string>
    <string name="CANCEL_CMD">Cancel</string>
    <string name="CLEAR_DATA_CMD">Clear data</string>
    <string name="RESET_SETTINGS_CMD">Reset settings</string>
    <string name="RESET_LAYOUT_CMD">Reset keylayout</string>
    <string name="load_profile">Load profile</string>
    <string name="save_profile">Save profile</string>
    <string name="PREF_SCREEN_OPTIONS">Screen options</string>
    <string name="PREF_SCALE_RATIO">Scale(%)</string>
    <string name="PREF_SCALE_TO_FIT">Scale to fit</string>
    <string name="PREF_KEEP_ASPECT_RATIO">Keep aspect ratio</string>
    <string name="PREF_FILTER">Filter</string>
    <string name="PREF_IMMEDIATE">Immediate processing mode</string>
    <string name="PREF_SHOW_FPS">Show FPS</string>
    <string name="PREF_FORCE_FULLSCREEN">Force fullscreen</string>
    <string name="PREF_LIMIT_FPS">Limit FPS</string>
    <string name="PREF_FONT_OPTIONS">Font options</string>
    <string name="PREF_WIDTH">Width</string>
    <string name="PREF_HEIGHT">Height</string>
    <string name="PREF_FONT_SMALL">Small</string>
    <string name="PREF_FONT_MEDIUM">Medium</string>
    <string name="PREF_FONT_LARGE">Large</string>
    <string name="PREF_FONT_SIZE_IN_SP">Values are in Scaled Pixels</string>
    <string name="PREF_BACKGROUND">Background</string>
    <string name="PREF_VIRTUAL_KEYBOARD_OPTIONS">Virtual keyboard</string>
    <string name="PREF_VK_SHOW">Show keyboard</string>
    <string name="PREF_VK_FEEDBACK">Haptic feedback</string>
    <string name="PREF_VK_FORCE_OPACITY">Force opacity for off-screen keys</string>
    <string name="PREF_TOUCH_INPUT">Touch input</string>
    <string name="PREF_HW_ACCELERATION">HW acceleration (unstable)</string>
    <string name="pref_graphics_software">Software</string>
    <string name="pref_graphics_hw_gles">HW acceleration (OpenGL ES)</string>
    <string name="pref_graphics_hw_view">HW acceleration (window)</string>
    <string name="pref_graphics_hw_surface">HW acceleration (surface)</string>
    <string name="PREF_VK_BACK">Buttons</string>
    <string name="PREF_VK_FORE">Labels</string>
    <string name="PREF_VK_OUTLINE">Outline</string>
    <string name="PREF_COLOR_HINT" translatable="false">RGB</string>
    <string name="PREF_VK_ALPHA">Opacity: </string>
    <string name="PREF_VK_HIDE_DELAY">Hide delay: </string>
    <string name="PREF_UNIT_MS">ms</string>
    <string name="PREF_VK_SEL_FORE">Labels (P)</string>
    <string name="PREF_VK_SEL_BACK">Buttons (P)</string>
    <string name="PREF_VK_KEY_SIZES">Key sizes</string>
    <string name="PREF_VK_NAV_KEYS">Joystick: </string>
    <string name="PREF_VK_SOFT_KEYS">Soft keys: </string>
    <string name="PREF_VK_NUM_KEYS">Digits: </string>
    <string name="PREF_VK_FIRE_KEY">Fire: </string>
    <string name="PREF_VK_SIZE_HINT">Size</string>
    <string name="SIZE_PRESETS">Presets</string>
    <string name="SWAP_SIZES">Swap sizes</string>
    <string name="PREF_SYS_PROPS">System properties</string>
    <string name="PREF_SYS_PROPS_HINT" translatable="false">microedition.platform: Sony Ericsson C510i\nmicroedition.profiles: MIDP2.0</string>
    <string name="PREF_ORIENTATION">Screen orientation</string>
    <string name="pref_orientation_default">Default</string>
    <string name="pref_orientation_auto">Auto</string>
    <string name="pref_orientation_port">Portrait</string>
    <string name="pref_orientation_land">Landscape</string>
    <string name="error">Error</string>
    <string name="message_clear_data">Do you really want to clear app data?</string>
    <string name="PREF_VK_TYPE">Keyboard type</string>
    <string name="pref_vk_type_arrows">Arrows</string>
    <string name="pref_vk_type_arrows_numbers">Arrows &amp; numbers</string>
    <string name="pref_vk_type_custom">Custom</string>
    <string name="pref_vk_type_numbers">Numbers</string>
    <string name="pref_vk_type_numbers_arrows">Numbers &amp; arrows</string>
    <string name="pref_vk_type_phone">Phone</string>
    <string name="pref_vk_type_phone_arrows">Phone (arrows)</string>
    <string name="PREF_LAYOUT">Layout</string>
    <string name="PREF_SHADER_FILTER">Shader:</string>
    <string name="identity_filter">Fast (no filter)</string>
    <string name="shader_tuning">Shader Tuning</string>
    <string name="shader_setting" translatable="false">%s: %s</string>
    <string name="reset">Reset</string>
    <string name="pref_input_devices_title">Input devices</string>
    <string name="pref_graphics_mode_title">Graphics mode:</string>
    <string name="PREF_FONT_ANTI_ALIASING">Anti-Aliasing</string>
    <string name="pref_screen_gravity">Screen gravity</string>
    <string name="pref_screen_gravity_bottom">Bottom</string>
    <string name="pref_screen_gravity_center">Center</string>
    <string name="pref_screen_gravity_left">Left</string>
    <string name="pref_screen_gravity_right">Right</string>
    <string name="pref_screen_gravity_top">Top</string>
    <string name="pref_screen_scale_type">Scale type</string>
    <string name="pref_screen_scale_type_fill">Fill window (ignore aspect ratio)</string>
    <string name="pref_screen_scale_type_fit">Fit to window</string>
    <string name="pref_screen_scale_type_none">As is</string>
    <string name="pref_vk_hide_hint">disabled</string>
    <string name="unlimited">unlimited</string>
    <string name="parallel_screen_redrawing">Parallel screen redrawing</string>
    <string name="saved">Saved</string>
    <string name="FORCE_CLOSE_CONFIRMATION">Force-closing the application may result in data loss or even break it completely!\nProceed?</string>
    <string name="CONFIRMATION_REQUIRED">Confirmation required</string>
    <string name="select_dialog_title">Select MIDlet</string>
    <string name="crash_dialog_message">Do you want to send error report to the developer?</string>
    <string name="crash_dialog_title">Error detected</string>
    <string name="report_crash">Send</string>
    <string name="layout_edit_finished">Edit mode finished</string>
    <string name="layout_edit_finish">Finish edit mode</string>
    <string name="layout_edit_mode">Keylayout edit mode</string>
    <string name="layout_scale_mode">Keylayout resize mode</string>
    <string name="pref_theme_default" translatable="false">system</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_storage">Storage &amp; Profiles</string>
    <string name="pref_enable_actionbar_title">Action bar</string>
    <string name="pref_enable_actionbar_summary">Show top toolbar controls during gameplay</string>
    <string name="pref_black_background_title">Pure black background</string>
    <string name="pref_black_background_summary">Pitch black (#000000) for OLED displays in dark mode</string>
    <string name="pref_enable_statusbar_title">Status bar</string>
    <string name="pref_add_cutout_area_title">Display cutout</string>
    <string name="pref_wakelock_title">Keep screen awake</string>
    <string name="pref_vibration_title">Haptic feedback</string>
    <string name="pref_emulator_dir">Working directory</string>
    <string name="pref_screenshot_summary">Capture pixel-perfect game output without scaling or filters</string>
    <string name="pref_screenshot_title">Raw screenshots</string>
    <string name="pref_category_experimental">Experimental/temporary options</string>
    <string name="pref_mascot_summary">Show notification when an app initializes Mascot Capsule 3D</string>
    <string name="pref_mascot_title">Mascot Capsule 3D detection</string>
</resources>