<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:title="@string/pref_category_appearance"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="@string/pref_theme_default"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="pref_theme"
            android:title="@string/pref_theme_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_black_background"
            android:summary="@string/pref_black_background_summary"
            android:title="@string/pref_black_background_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_actionbar_switch"
            android:summary="@string/pref_enable_actionbar_summary"
            android:title="@string/pref_enable_actionbar_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_statusbar_switch"
            android:summary="@string/pref_enable_actionbar_summary"
            android:title="@string/pref_enable_statusbar_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_add_cutout_area"
            android:title="@string/pref_add_cutout_area_title"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            tools:isPreferenceVisible="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_behavior"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_wakelock_switch"
            android:title="@string/pref_wakelock_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_screenshot_switch"
            android:summary="@string/pref_screenshot_summary"
            android:title="@string/pref_screenshot_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_vibration_switch"
            android:title="@string/pref_vibration_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_storage"
        app:iconSpaceReserved="false">
        <Preference
            android:key="pref_default_settings"
            android:title="@string/profiles"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="emulator_dir"
            android:title="@string/pref_emulator_dir"
            app:iconSpaceReserved="false"
            tools:summary="/sdcard/Neutron" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_experimental"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:key="micro3d_using_message"
            android:summary="@string/pref_mascot_summary"
            android:title="@string/pref_mascot_title"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>